--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@r2d2bzh/yac",
-  "version": "1.0.3",
+  "version": "1.0.4-0",
   "description": "yac relies entirely on convict and only configures it to parse YAML configuration files by default through JS-YAML",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,6 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "ava": "^5.1.1"
+    "ava": "^6.0.1"
   }
 }
