--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.4",
   "description": "yac relies entirely on convict and only configures it to parse YAML configuration files by default through JS-YAML",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -31,6 +34,8 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "ava": "^6.0.1"
+    "ava": "^6.4.1",
+    "eslint": "^9.35.0",
+    "@r2d2bzh/eslint-config": "^2.0.1"
   }
 }
